New Synonyms for 26 emojis.

--- a/public/index.html
+++ b/public/index.html
@@ -317,25 +317,25 @@
     </ul>
     <h2>Nature</h2>
     <ul class="nature emojis" id="emoji-nature">
-      <li><div><img src="graphics/emojis/sunny.png">:<span class="name" data-alternative-name="weather, sun, nature, brightness, summer, beach, spring">sunny</span>:</div></li>
+      <li><div><img src="graphics/emojis/sunny.png">:<span class="name" data-alternative-name="weather, sun, nature, brightness, summer, beach, spring, bright, sunshine">sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/umbrella.png">:<span class="name" data-alternative-name="water, rain, rainy, weather, spring">umbrella</span>:</div></li>
-      <li><div><img src="graphics/emojis/cloud.png">:<span class="name" data-alternative-name="weather, sky">cloud</span>:</div></li>
-      <li><div><img src="graphics/emojis/snowflake.png">:<span class="name" data-alternative-name="winter, season, cold, weather, christmas, xmas">snowflake</span>:</div></li>
-      <li><div><img src="graphics/emojis/snowman.png">:<span class="name" data-alternative-name="winter, season, cold, weather, christmas, xmas, frozen">snowman</span>:</div></li>
-      <li><div><img src="graphics/emojis/zap.png">:<span class="name" data-alternative-name="weather, lightning, thunder, lightning bolt, fast">zap</span>:</div></li>
-      <li><div><img src="graphics/emojis/cyclone.png">:<span class="name" data-alternative-name="weather, swirl, blue, cloud">cyclone</span>:</div></li>
-      <li><div><img src="graphics/emojis/foggy.png">:<span class="name" data-alternative-name="weather, fog, photo, mountain">foggy</span>:</div></li>
-      <li><div><img src="graphics/emojis/ocean.png">:<span class="name" data-alternative-name="waves, sea, water, wave, nature, tsunami, disaster">ocean</span>:</div></li>
-      <li><div><img src="graphics/emojis/cat.png">:<span class="name" data-alternative-name="animal, meow, nature, pet">cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/dog.png">:<span class="name" data-alternative-name="animal, friend, nature, woof, puppy, pet, faithful">dog</span>:</div></li>
-      <li><div><img src="graphics/emojis/mouse.png">:<span class="name" data-alternative-name="animal, nature, cheese">mouse</span>:</div></li>
-      <li><div><img src="graphics/emojis/hamster.png">:<span class="name" data-alternative-name="animal, nature">hamster</span>:</div></li>
-      <li><div><img src="graphics/emojis/rabbit.png">:<span class="name" data-alternative-name="animal, nature, pet, spring, magic">rabbit</span>:</div></li>
-      <li><div><img src="graphics/emojis/wolf.png">:<span class="name" data-alternative-name="animal,dog, animal, nature, wild, audrey, lulu, audrey and lulu">wolf</span>:</div></li>
-      <li><div><img src="graphics/emojis/frog.png">:<span class="name" data-alternative-name="animal, nature, croak">frog</span>:</div></li>
-      <li><div><img src="graphics/emojis/tiger.png">:<span class="name" data-alternative-name="animal, cat, danger, wild, nature, roar">tiger</span>:</div></li>
+      <li><div><img src="graphics/emojis/cloud.png">:<span class="name" data-alternative-name="weather, sky, cloudy, rain">cloud</span>:</div></li>
+      <li><div><img src="graphics/emojis/snowflake.png">:<span class="name" data-alternative-name="winter, season, cold, weather, christmas, xmas, snowy, snow">snowflake</span>:</div></li>
+      <li><div><img src="graphics/emojis/snowman.png">:<span class="name" data-alternative-name="winter, season, cold, weather, christmas, xmas, frozen, snow">snowman</span>:</div></li>
+      <li><div><img src="graphics/emojis/zap.png">:<span class="name" data-alternative-name="weather, lightning, thunder, lightning bolt, fast, flash, bolt">zap</span>:</div></li>
+      <li><div><img src="graphics/emojis/cyclone.png">:<span class="name" data-alternative-name="weather, swirl, blue, cloud, hurricane, wind">cyclone</span>:</div></li>
+      <li><div><img src="graphics/emojis/foggy.png">:<span class="name" data-alternative-name="weather, fog, photo, mountain, bad weather, smog">foggy</span>:</div></li>
+      <li><div><img src="graphics/emojis/ocean.png">:<span class="name" data-alternative-name="waves, sea, water, wave, nature, tsunami, disaster, beach">ocean</span>:</div></li>
+      <li><div><img src="graphics/emojis/cat.png">:<span class="name" data-alternative-name="animal, meow, nature, pet, cute">cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/dog.png">:<span class="name" data-alternative-name="animal, friend, nature, woof, puppy, pet, faithful, cute">dog</span>:</div></li>
+      <li><div><img src="graphics/emojis/mouse.png">:<span class="name" data-alternative-name="animal, nature, cheese, cute">mouse</span>:</div></li>
+      <li><div><img src="graphics/emojis/hamster.png">:<span class="name" data-alternative-name="animal, nature, cute">hamster</span>:</div></li>
+      <li><div><img src="graphics/emojis/rabbit.png">:<span class="name" data-alternative-name="animal, nature, pet, spring, magic, bunny, cute">rabbit</span>:</div></li>
+      <li><div><img src="graphics/emojis/wolf.png">:<span class="name" data-alternative-name="animal, dog, animal, nature, wild, audrey, lulu, audrey and lulu, gmae of thrones">wolf</span>:</div></li>
+      <li><div><img src="graphics/emojis/frog.png">:<span class="name" data-alternative-name="animal, nature, croak, sip">frog</span>:</div></li>
+      <li><div><img src="graphics/emojis/tiger.png">:<span class="name" data-alternative-name="animal, cat, danger, wild, nature, roar, cute">tiger</span>:</div></li>
       <li><div><img src="graphics/emojis/koala.png">:<span class="name" data-alternative-name="animal, nature">koala</span>:</div></li>
-      <li><div><img src="graphics/emojis/bear.png">:<span class="name" data-alternative-name="animal, nature, wild">bear</span>:</div></li>
+      <li><div><img src="graphics/emojis/bear.png">:<span class="name" data-alternative-name="animal, nature, wild, cute">bear</span>:</div></li>
       <li><div><img src="graphics/emojis/pig.png">:<span class="name" data-alternative-name="animal, oink, nature">pig</span>:</div></li>
       <li><div><img src="graphics/emojis/pig_nose.png">:<span class="name" data-alternative-name="animal, oink">pig_nose</span>:</div></li>
       <li><div><img src="graphics/emojis/cow.png">:<span class="name" data-alternative-name="animal, beef, ox, nature, moo, milk">cow</span>:</div></li>
@@ -439,24 +439,24 @@
       <li><div><img src="graphics/emojis/gift_heart.png">:<span class="name" data-alternative-name="heart, love, valentines">gift_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/dolls.png">:<span class="name" data-alternative-name="japanese, toy, kimono">dolls</span>:</div></li>
       <li><div><img src="graphics/emojis/school_satchel.png">:<span class="name" data-alternative-name="student, education, bag">school_satchel</span>:</div></li>
-      <li><div><img src="graphics/emojis/mortar_board.png">:<span class="name" data-alternative-name="edu, university, school, college, degree, graduation, cap, hat, legal, learn, education">mortar_board</span>:</div></li>
-      <li><div><img src="graphics/emojis/flags.png">:<span class="name" data-alternative-name="fish, japanese, koinobori, carp, banner">flags</span>:</div></li>
-      <li><div><img src="graphics/emojis/fireworks.png">:<span class="name" data-alternative-name="photo, festival, carnival, congratulations">fireworks</span>:</div></li>
+      <li><div><img src="graphics/emojis/mortar_board.png">:<span class="name" data-alternative-name="edu, university, school, college, degree, graduation, cap, hat, legal, learn, education, 18">mortar_board</span>:</div></li>
+      <li><div><img src="graphics/emojis/flags.png">:<span class="name" data-alternative-name="fish, japanese, koinobori, carp, banner, wind">flags</span>:</div></li>
+      <li><div><img src="graphics/emojis/fireworks.png">:<span class="name" data-alternative-name="photo, festival, carnival, congratulations, new year">fireworks</span>:</div></li>
       <li><div><img src="graphics/emojis/sparkler.png">:<span class="name" data-alternative-name="stars, night, shine">sparkler</span>:</div></li>
       <li><div><img src="graphics/emojis/wind_chime.png">:<span class="name" data-alternative-name="nature, ding, spring, bell">wind_chime</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_scene.png">:<span class="name" data-alternative-name="photo, japan, asia, tsukimi">rice_scene</span>:</div></li>
       <li><div><img src="graphics/emojis/jack_o_lantern.png">:<span class="name" data-alternative-name="halloween, light, pumpkin, creepy, fall">jack_o_lantern</span>:</div></li>
-      <li><div><img src="graphics/emojis/ghost.png">:<span class="name" data-alternative-name="boom, halloween, spooky, scary">ghost</span>:</div></li>
+      <li><div><img src="graphics/emojis/ghost.png">:<span class="name" data-alternative-name="boom, halloween, spooky, scary, snapchat">ghost</span>:</div></li>
       <li><div><img src="graphics/emojis/santa.png">:<span class="name" data-alternative-name="christmas, festival, man, male, xmas, father christmas">santa</span>:</div></li>
-      <li><div><img src="graphics/emojis/christmas_tree.png">:<span class="name" data-alternative-name="festival, vacation, december, xmas, celebration">christmas_tree</span>:</div></li>
-      <li><div><img src="graphics/emojis/gift.png">:<span class="name" data-alternative-name="present, birthday, christmas, xmas">gift</span>:</div></li>
+      <li><div><img src="graphics/emojis/christmas_tree.png">:<span class="name" data-alternative-name="festival, vacation, december, xmas, celebration, christmas">christmas_tree</span>:</div></li>
+      <li><div><img src="graphics/emojis/gift.png">:<span class="name" data-alternative-name="present, birthday, christmas, xmas, surprise">gift</span>:</div></li>
       <li><div><img src="graphics/emojis/bell.png">:<span class="name" data-alternative-name="sound, notification, christmas, xmas, chime">bell</span>:</div></li>
-      <li><div><img src="graphics/emojis/no_bell.png">:<span class="name" data-alternative-name="sound, volume, mute, quiet, silent">no_bell</span>:</div></li>
+      <li><div><img src="graphics/emojis/no_bell.png">:<span class="name" data-alternative-name="sound, volume, mute, quiet, silent, do not disturb">no_bell</span>:</div></li>
       <li><div><img src="graphics/emojis/tanabata_tree.png">:<span class="name" data-alternative-name="plant, nature, branch, summer">tanabata_tree</span>:</div></li>
       <li><div><img src="graphics/emojis/tada.png">:<span class="name" data-alternative-name="party, contulations, birthday, magic, circus">tada</span>:</div></li>
       <li><div><img src="graphics/emojis/confetti_ball.png">:<span class="name" data-alternative-name="celebration, festival, party, birthday, circus">confetti_ball</span>:</div></li>
-      <li><div><img src="graphics/emojis/balloon.png">:<span class="name" data-alternative-name="party, celebration, birthday, circus">balloon</span>:</div></li>
-      <li><div><img src="graphics/emojis/crystal_ball.png">:<span class="name" data-alternative-name="disco, party, magic, circus, fortune_teller">crystal_ball</span>:</div></li>
+      <li><div><img src="graphics/emojis/balloon.png">:<span class="name" data-alternative-name="party, celebration, birthday, circus, congratulations, congrats">balloon</span>:</div></li>
+      <li><div><img src="graphics/emojis/crystal_ball.png">:<span class="name" data-alternative-name="disco, party, magic, circus, fortune_teller, prophecy">crystal_ball</span>:</div></li>
       <li><div><img src="graphics/emojis/cd.png">:<span class="name" data-alternative-name="technology, dvd, disk, disc, 90s">cd</span>:</div></li>
       <li><div><img src="graphics/emojis/dvd.png">:<span class="name" data-alternative-name="cd, disk, disc">dvd</span>:</div></li>
       <li><div><img src="graphics/emojis/floppy_disk.png">:<span class="name" data-alternative-name="oldschool, technology, save, 90s, 80s">floppy_disk</span>:</div></li>
