--- a/public/index.html
+++ b/public/index.html
@@ -325,7 +325,7 @@
       <li><div><img src="graphics/emojis/zap.png">:<span class="name" data-alternative-name="weather, lightning, thunder, lightning bolt, fast">zap</span>:</div></li>
       <li><div><img src="graphics/emojis/cyclone.png">:<span class="name" data-alternative-name="weather, swirl, blue, cloud">cyclone</span>:</div></li>
       <li><div><img src="graphics/emojis/foggy.png">:<span class="name" data-alternative-name="weather, fog, photo, mountain">foggy</span>:</div></li>
-      <li><div><img src="graphics/emojis/ocean.png">:<span class="name" data-alternative-name="waves, sea, water, wave, nature, tsunami, disaster">ocean</span>:</div></li>
+      <li><div><img src="graphics/emojis/ocean.png">:<span class="name" data-alternative-name="waves, sea, water, wave, nature, tsunami, disaster,wet">ocean</span>:</div></li>
       <li><div><img src="graphics/emojis/cat.png">:<span class="name" data-alternative-name="animal, meow, nature, pet">cat</span>:</div></li>
       <li><div><img src="graphics/emojis/dog.png">:<span class="name" data-alternative-name="animal, friend, nature, woof, puppy, pet, faithful">dog</span>:</div></li>
       <li><div><img src="graphics/emojis/mouse.png">:<span class="name" data-alternative-name="animal, nature, cheese">mouse</span>:</div></li>
