Added new synonyms, and deleted some duplicate synonyms.

--- a/public/index.html
+++ b/public/index.html
@@ -644,33 +644,33 @@
       <li><div><img src="graphics/emojis/beers.png">:<span class="name" data-alternative-name="drink alcohol, relax, beverage, drink, drunk, party, pub, summer, alcohol, booze">beers</span>:</div></li>
       <li><div><img src="graphics/emojis/cocktail.png">:<span class="name" data-alternative-name="drink alcohol, drink, drunk, alcohol, beverage, booze">cocktail</span>:</div></li>
       <li><div><img src="graphics/emojis/tropical_drink.png">:<span class="name" data-alternative-name="beverage, cocktail, summer, beach, alcohol, booze">tropical_drink</span>:</div></li>
-      <li><div><img src="graphics/emojis/wine_glass.png">:<span class="name" data-alternative-name="drink alcohol, drink, beverage, drunk, alcohol, booze">wine_glass</span>:</div></li>
-      <li><div><img src="graphics/emojis/fork_and_knife.png">:<span class="name" data-alternative-name="cutlery, kitchen">fork_and_knife</span>:</div></li>
+      <li><div><img src="graphics/emojis/wine_glass.png">:<span class="name" data-alternative-name="drink alcohol, drink, beverage, drunk, alcohol, booze, lit">wine_glass</span>:</div></li>
+      <li><div><img src="graphics/emojis/fork_and_knife.png">:<span class="name" data-alternative-name="cutlery, kitchen, food">fork_and_knife</span>:</div></li>
       <li><div><img src="graphics/emojis/pizza.png">:<span class="name" data-alternative-name="food, italian dairy, party">pizza</span>:</div></li>
-      <li><div><img src="graphics/emojis/hamburger.png">:<span class="name" data-alternative-name="food, american meat, meat, fast food, beef, cheeseburger, mcdonalds, burger king">hamburger</span>:</div></li>
-      <li><div><img src="graphics/emojis/fries.png">:<span class="name" data-alternative-name="food, american, chips, snack, fast food">fries</span>:</div></li>
+      <li><div><img src="graphics/emojis/hamburger.png">:<span class="name" data-alternative-name="food, american meat, meat, fast food, beef, cheeseburger, mcdonalds, burger king, american">hamburger</span>:</div></li>
+      <li><div><img src="graphics/emojis/fries.png">:<span class="name" data-alternative-name="food, american, chips, snack, fast food, mcdonalds">fries</span>:</div></li>
       <li><div><img src="graphics/emojis/poultry_leg.png">:<span class="name" data-alternative-name="food, meat, drumstick, bird, chicken, turkey">poultry_leg</span>:</div></li>
       <li><div><img src="graphics/emojis/meat_on_bone.png">:<span class="name" data-alternative-name="food, meat, good, drumstick">meat_on_bone</span>:</div></li>
       <li><div><img src="graphics/emojis/spaghetti.png">:<span class="name" data-alternative-name="food, italian noodles, italian, noodle">spaghetti</span>:</div></li>
       <li><div><img src="graphics/emojis/curry.png">:<span class="name" data-alternative-name="food, indian, spicy, hot">curry</span>:</div></li>
-      <li><div><img src="graphics/emojis/fried_shrimp.png">:<span class="name" data-alternative-name="food, seafood, animal, appetizer, summer">fried_shrimp</span>:</div></li>
+      <li><div><img src="graphics/emojis/fried_shrimp.png">:<span class="name" data-alternative-name="food, seafood, animal, appetizer, summer, shrimp">fried_shrimp</span>:</div></li>
       <li><div><img src="graphics/emojis/bento.png">:<span class="name" data-alternative-name="food, japanese, box">bento</span>:</div></li>
       <li><div><img src="graphics/emojis/sushi.png">:<span class="name" data-alternative-name="food, japanese, fish, rice">sushi</span>:</div></li>
       <li><div><img src="graphics/emojis/fish_cake.png">:<span class="name" data-alternative-name="food, japanese seafood, naruto, japan, sea, beach">fish_cake</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_ball.png">:<span class="name" data-alternative-name="food, japanese">rice_ball</span>:</div></li>
-      <li><div><img src="graphics/emojis/rice_cracker.png">:<span class="name" data-alternative-name="food, japanese">rice_cracker</span>:</div></li>
-      <li><div><img src="graphics/emojis/rice.png">:<span class="name" data-alternative-name="food, china, asian">rice</span>:</div></li>
+      <li><div><img src="graphics/emojis/rice_cracker.png">:<span class="name" data-alternative-name="food, japanese, chinese">rice_cracker</span>:</div></li>
+      <li><div><img src="graphics/emojis/rice.png">:<span class="name" data-alternative-name="food, china, asian, indian, chinese">rice</span>:</div></li>
       <li><div><img src="graphics/emojis/ramen.png">:<span class="name" data-alternative-name="food noodles, food, japanese, noodle, chipsticks">ramen</span>:</div></li>
-      <li><div><img src="graphics/emojis/stew.png">:<span class="name" data-alternative-name="food, meat, soup">stew</span>:</div></li>
+      <li><div><img src="graphics/emojis/stew.png">:<span class="name" data-alternative-name="food, meat, soup, chinese">stew</span>:</div></li>
       <li><div><img src="graphics/emojis/oden.png">:<span class="name" data-alternative-name="food, japanese">oden</span>:</div></li>
       <li><div><img src="graphics/emojis/dango.png">:<span class="name" data-alternative-name="food, japanese, barbecue, meat">dango</span>:</div></li>
-      <li><div><img src="graphics/emojis/egg.png">:<span class="name" data-alternative-name="food,, food, breakfast, kitchen">egg</span>:</div></li>
-      <li><div><img src="graphics/emojis/bread.png">:<span class="name" data-alternative-name="food,, food, wheat, breakfast, toast">bread</span>:</div></li>
+      <li><div><img src="graphics/emojis/egg.png">:<span class="name" data-alternative-name="food, breakfast, kitchen">egg</span>:</div></li>
+      <li><div><img src="graphics/emojis/bread.png">:<span class="name" data-alternative-name="food, wheat, breakfast, toast">bread</span>:</div></li>
       <li><div><img src="graphics/emojis/doughnut.png">:<span class="name" data-alternative-name="food, dessert, snack, sweet, donut">doughnut</span>:</div></li>
-      <li><div><img src="graphics/emojis/custard.png">:<span class="name" data-alternative-name="food, dessert">custard</span>:</div></li>
-      <li><div><img src="graphics/emojis/icecream.png">:<span class="name" data-alternative-name="food, dessert, hot, summer">icecream</span>:</div></li>
-      <li><div><img src="graphics/emojis/ice_cream.png">:<span class="name" data-alternative-name="food, dessert, hot">ice_cream</span>:</div></li>
-      <li><div><img src="graphics/emojis/shaved_ice.png">:<span class="name" data-alternative-name="food, dessert, hot, summer">shaved_ice</span>:</div></li>
+      <li><div><img src="graphics/emojis/custard.png">:<span class="name" data-alternative-name="food, dessert, sweet">custard</span>:</div></li>
+      <li><div><img src="graphics/emojis/icecream.png">:<span class="name" data-alternative-name="food, dessert, hot, summer, cold, sweet">icecream</span>:</div></li>
+      <li><div><img src="graphics/emojis/ice_cream.png">:<span class="name" data-alternative-name="food, dessert, hot, cone">ice_cream</span>:</div></li>
+      <li><div><img src="graphics/emojis/shaved_ice.png">:<span class="name" data-alternative-name="food, dessert, hot, summer, sweet, cold">shaved_ice</span>:</div></li>
       <li><div><img src="graphics/emojis/birthday.png">:<span class="name" data-alternative-name="party, cake, celebration">birthday</span>:</div></li>
       <li><div><img src="graphics/emojis/cake.png">:<span class="name" data-alternative-name="food, dessert">cake</span>:</div></li>
       <li><div><img src="graphics/emojis/cookie.png">:<span class="name" data-alternative-name="food, dessert, snack, oreo, chocolate, sweet">cookie</span>:</div></li>
