--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
       <li><div><img src="graphics/emojis/star2.png">:<span class="name" data-alternative-name="night, sparkle, awesome, good, magic">star2</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy.png">:<span class="name" data-alternative-name="star, sparkle, shoot, magic">dizzy</span>:</div></li>
       <li><div><img src="graphics/emojis/boom.png">:<span class="name" data-alternative-name="explosion, bomb, explode, collision, blown">boom</span>:</div></li>
-      <li><div><img src="graphics/emojis/collision.png">:<span class="name" data-alternative-name="accident,fight,boom">collision</span>:</div></li>
+      <li><div><img src="graphics/emojis/collision.png">:<span class="name" data-alternative-name="accident,fight,boom, crash">collision</span>:</div></li>
       <li><div><img src="graphics/emojis/anger.png">:<span class="name" data-alternative-name="angry, mad">anger</span>:</div></li>
       <li><div><img src="graphics/emojis/exclamation.png">:<span class="name" data-alternative-name="heavy_exclamation_mark, danger, surprise, punctuation, wow, warning">exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/question.png">:<span class="name" data-alternative-name="doubt, confused">question</span>:</div></li>
@@ -209,14 +209,14 @@
       <li><div><img src="graphics/emojis/zzz.png">:<span class="name" data-alternative-name="sleep, bored, sleepy, tired">zzz</span>:</div></li>
       <li><div><img src="graphics/emojis/dash.png">:<span class="name" data-alternative-name="wind, air, fast, shoo, fart, smoke, puff">dash</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_drops.png">:<span class="name" data-alternative-name="water, drip, oops">sweat_drops</span>:</div></li>
-      <li><div><img src="graphics/emojis/notes.png">:<span class="name data-alternative-name=" music""="" data-alternative-name="music, score">notes</span>:</div></li>
+      <li><div><img src="graphics/emojis/notes.png">:<span class="name" data-alternative-name="music, score">notes</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_note.png">:<span class="name" data-alternative-name="music, score, tone, sound">musical_note</span>:</div></li>
       <li><div><img src="graphics/emojis/fire.png">:<span class="name" data-alternative-name="hot, cook, flame">fire</span>:</div></li>
-      <li><div><img src="graphics/emojis/hankey.png">:<span class="name" data-alternative-name="poop, shitface, fail, turd">hankey</span>:</div></li>
-      <li><div><img src="graphics/emojis/poop.png">:<span class="name" data-alternative-name="shit, turd">poop</span>:</div></li>
+      <li><div><img src="graphics/emojis/hankey.png">:<span class="name" data-alternative-name="poop, shitface, fail, turd, poo">hankey</span>:</div></li>
+      <li><div><img src="graphics/emojis/poop.png">:<span class="name" data-alternative-name="shit, turd, poo">poop</span>:</div></li>
       <li><div><img src="graphics/emojis/shit.png">:<span class="name" data-alternative-name="poop">shit</span>:</div></li>
       <li><div><img src="graphics/emojis/plus1.png">:<span class="name" data-alternative-name="thumbsup, yes, awesome, good, agree, accept, cool, hand, like">+1</span>:</div></li>
-      <li><div><img src="graphics/emojis/thumbsup.png">:<span class="name" data-alternative-name="like">thumbsup</span>:</div></li>
+      <li><div><img src="graphics/emojis/thumbsup.png">:<span class="name" data-alternative-name="like, yes">thumbsup</span>:</div></li>
       <li><div><img src="graphics/emojis/-1.png">:<span class="name" data-alternative-name="thumbsdown, no, dislike, hand">-1</span>:</div></li>
       <li><div><img src="graphics/emojis/thumbsdown.png">:<span class="name" data-alternative-name="dislike">thumbsdown</span>:</div></li>
       <li><div><img src="graphics/emojis/ok_hand.png">:<span class="name" data-alternative-name="fingers, limbs, perfect">ok_hand</span>:</div></li>
