More emoji synonyms

--- a/public/index.html
+++ b/public/index.html
@@ -334,9 +334,9 @@
       <li><div><img src="graphics/emojis/wolf.png">:<span class="name" data-alternative-name="animal,dog, animal, nature, wild, audrey, lulu, audrey and lulu">wolf</span>:</div></li>
       <li><div><img src="graphics/emojis/frog.png">:<span class="name" data-alternative-name="animal, nature, croak">frog</span>:</div></li>
       <li><div><img src="graphics/emojis/tiger.png">:<span class="name" data-alternative-name="animal, cat, danger, wild, nature, roar">tiger</span>:</div></li>
-      <li><div><img src="graphics/emojis/koala.png">:<span class="name" data-alternative-name="animal, nature">koala</span>:</div></li>
+      <li><div><img src="graphics/emojis/koala.png">:<span class="name" data-alternative-name="animal, nature, australia">koala</span>:</div></li>
       <li><div><img src="graphics/emojis/bear.png">:<span class="name" data-alternative-name="animal, nature, wild">bear</span>:</div></li>
-      <li><div><img src="graphics/emojis/pig.png">:<span class="name" data-alternative-name="animal, oink, nature">pig</span>:</div></li>
+      <li><div><img src="graphics/emojis/pig.png">:<span class="name" data-alternative-name="animal, oink, nature, farm">pig</span>:</div></li>
       <li><div><img src="graphics/emojis/pig_nose.png">:<span class="name" data-alternative-name="animal, oink">pig_nose</span>:</div></li>
       <li><div><img src="graphics/emojis/cow.png">:<span class="name" data-alternative-name="animal, beef, ox, nature, moo, milk">cow</span>:</div></li>
       <li><div><img src="graphics/emojis/boar.png">:<span class="name" data-alternative-name="animal, nature">boar</span>:</div></li>
@@ -353,11 +353,11 @@
       <li><div><img src="graphics/emojis/baby_chick.png">:<span class="name" data-alternative-name="animal, bird, chicken">baby_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/hatched_chick.png">:<span class="name" data-alternative-name="animal, bird, chicken, baby">hatched_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/hatching_chick.png">:<span class="name" data-alternative-name="animal, bird,egg, chicken, egg, born, baby, bird">hatching_chick</span>:</div></li>
-      <li><div><img src="graphics/emojis/chicken.png">:<span class="name" data-alternative-name="animal, bird, cluck, nature">chicken</span>:</div></li>
+      <li><div><img src="graphics/emojis/chicken.png">:<span class="name" data-alternative-name="animal, bird, cluck, nature, farm">chicken</span>:</div></li>
       <li><div><img src="graphics/emojis/penguin.png">:<span class="name" data-alternative-name="animal, bird, nature">penguin</span>:</div></li>
       <li><div><img src="graphics/emojis/turtle.png">:<span class="name" data-alternative-name="animal, tortoise, slow, nature">turtle</span>:</div></li>
       <li><div><img src="graphics/emojis/bug.png">:<span class="name" data-alternative-name="animal, insect, nature, worm">bug</span>:</div></li>
-      <li><div><img src="graphics/emojis/honeybee.png">:<span class="name" data-alternative-name="animal">honeybee</span>:</div></li>
+      <li><div><img src="graphics/emojis/honeybee.png">:<span class="name" data-alternative-name="animal, honey, nature">honeybee</span>:</div></li>
       <li><div><img src="graphics/emojis/ant.png">:<span class="name" data-alternative-name="animal, insect, nature, bug">ant</span>:</div></li>
       <li><div><img src="graphics/emojis/beetle.png">:<span class="name" data-alternative-name="animal, insect, nature, bug">beetle</span>:</div></li>
       <li><div><img src="graphics/emojis/snail.png">:<span class="name" data-alternative-name="animal, slow, shell">snail</span>:</div></li>
