Remove duplicate alternative name and superfluous comma

--- a/public/index.html
+++ b/public/index.html
@@ -664,8 +664,8 @@
       <li><div><img src="graphics/emojis/stew.png">:<span class="name" data-alternative-name="food, meat, soup">stew</span>:</div></li>
       <li><div><img src="graphics/emojis/oden.png">:<span class="name" data-alternative-name="food, japanese">oden</span>:</div></li>
       <li><div><img src="graphics/emojis/dango.png">:<span class="name" data-alternative-name="food, japanese, barbecue, meat">dango</span>:</div></li>
-      <li><div><img src="graphics/emojis/egg.png">:<span class="name" data-alternative-name="food,, food, breakfast, kitchen">egg</span>:</div></li>
-      <li><div><img src="graphics/emojis/bread.png">:<span class="name" data-alternative-name="food,, food, wheat, breakfast, toast">bread</span>:</div></li>
+      <li><div><img src="graphics/emojis/egg.png">:<span class="name" data-alternative-name="food, breakfast, kitchen">egg</span>:</div></li>
+      <li><div><img src="graphics/emojis/bread.png">:<span class="name" data-alternative-name="food, wheat, breakfast, toast">bread</span>:</div></li>
       <li><div><img src="graphics/emojis/doughnut.png">:<span class="name" data-alternative-name="food, dessert, snack, sweet, donut">doughnut</span>:</div></li>
       <li><div><img src="graphics/emojis/custard.png">:<span class="name" data-alternative-name="food, dessert">custard</span>:</div></li>
       <li><div><img src="graphics/emojis/icecream.png">:<span class="name" data-alternative-name="food, dessert, hot, summer">icecream</span>:</div></li>
