--- a/public/index.html
+++ b/public/index.html
@@ -238,8 +238,10 @@
       <li><div><img src="graphics/emojis/clap.png">:<span class="name" data-alternative-name="hands, praise, applause, congrats, yay">clap</span>:</div></li>
       <li><div><img src="graphics/emojis/muscle.png">:<span class="name" data-alternative-name="arm, flex, hand, summer, strong">muscle</span>:</div></li>
       <li><div><img src="graphics/emojis/metal.png">:<span class="name" data-alternative-name="fingers, rocknroll, concert, band, custom_">metal</span>:</div></li>
-      <li><div><img src="graphics/emojis/fu.png">:<span class="name" data-alternative-name="fuck, finger, dislike, thumbsdown, disapprove, no, custom_">fu</span>:</div></li>
-      <li><div><img src="graphics/emojis/runner.png">:<span class="name" data-alternative-name="sport, man, walking, exercise, race, running">runner</span>:</div></li>
+      <li><div><img src="graphics/emojis/fu.png">:<span class="name" data-alternative-name="fuck, finger, dislike, thumbsdown, disapprove, no, flip, custom_">fu</span>:</div></li>
+      <li><div><img src="graphics/emojis/crossed_fingers.png">:<span class="name" data-alternative-name="luck, crossed, fingers, hand">crossed_fingers</span>:</div></li>
+	  <li><div><img src="graphics/emojis/levitating_businessman.png">:<span class="name" data-alternative-name="buisnessman, levitating, floating, buisness, man, hover">levitating_buisnessman</span>:</div></li>
+	  <li><div><img src="graphics/emojis/runner.png">:<span class="name" data-alternative-name="sport, man, walking, exercise, race, running">runner</span>:</div></li>
       <li><div><img src="graphics/emojis/running.png">:<span class="name" data-alternative-name="sport">running</span>:</div></li>
       <li><div><img src="graphics/emojis/couple.png">:<span class="name" data-alternative-name="pair, people, human, love, date, dating, like, affection, valentines, marriage">couple</span>:</div></li>
       <li><div><img src="graphics/emojis/family.png">:<span class="name" data-alternative-name="home, parents, child, mom, dad, father, mother, people, human">family</span>:</div></li>
@@ -664,13 +666,14 @@
       <li><div><img src="graphics/emojis/stew.png">:<span class="name" data-alternative-name="food, meat, soup">stew</span>:</div></li>
       <li><div><img src="graphics/emojis/oden.png">:<span class="name" data-alternative-name="food, japanese">oden</span>:</div></li>
       <li><div><img src="graphics/emojis/dango.png">:<span class="name" data-alternative-name="food, japanese, barbecue, meat">dango</span>:</div></li>
-      <li><div><img src="graphics/emojis/egg.png">:<span class="name" data-alternative-name="food,, food, breakfast, kitchen">egg</span>:</div></li>
-      <li><div><img src="graphics/emojis/bread.png">:<span class="name" data-alternative-name="food,, food, wheat, breakfast, toast">bread</span>:</div></li>
+      <li><div><img src="graphics/emojis/egg.png">:<span class="name" data-alternative-name="food, food, breakfast, kitchen">egg</span>:</div></li>
+      <li><div><img src="graphics/emojis/pan.png">:<span class="name" data-alternative-name="frying, pan, food, breakfast, kitchen">pan</span>:</div></li>
+	  <li><div><img src="graphics/emojis/bread.png">:<span class="name" data-alternative-name="food,, food, wheat, breakfast, toast">bread</span>:</div></li>
       <li><div><img src="graphics/emojis/doughnut.png">:<span class="name" data-alternative-name="food, dessert, snack, sweet, donut">doughnut</span>:</div></li>
       <li><div><img src="graphics/emojis/custard.png">:<span class="name" data-alternative-name="food, dessert">custard</span>:</div></li>
       <li><div><img src="graphics/emojis/icecream.png">:<span class="name" data-alternative-name="food, dessert, hot, summer">icecream</span>:</div></li>
       <li><div><img src="graphics/emojis/ice_cream.png">:<span class="name" data-alternative-name="food, dessert, hot">ice_cream</span>:</div></li>
-      <li><div><img src="graphics/emojis/shaved_ice.png">:<span class="name" data-alternative-name="food, dessert, hot, summer">shaved_ice</span>:</div></li>
+      <li><div><img src="graphics/emojis/shaved_ice.png">:<span class="name" data-alternative-name="food, dessert, hot, summer, snow cone">shaved_ice</span>:</div></li>
       <li><div><img src="graphics/emojis/birthday.png">:<span class="name" data-alternative-name="party, cake, celebration">birthday</span>:</div></li>
       <li><div><img src="graphics/emojis/cake.png">:<span class="name" data-alternative-name="food, dessert">cake</span>:</div></li>
       <li><div><img src="graphics/emojis/cookie.png">:<span class="name" data-alternative-name="food, dessert, snack, oreo, chocolate, sweet">cookie</span>:</div></li>
@@ -695,6 +698,7 @@
       <li><div><img src="graphics/emojis/eggplant.png">:<span class="name" data-alternative-name="food, vegetable, nature, aubergine">eggplant</span>:</div></li>
       <li><div><img src="graphics/emojis/tomato.png">:<span class="name" data-alternative-name="food, fruit, vegetable, nature">tomato</span>:</div></li>
       <li><div><img src="graphics/emojis/corn.png">:<span class="name" data-alternative-name="food, vegetable, plant">corn</span>:</div></li>
+	  <li><div><img src="graphics/emojis/burrito.png">:<span class="name" data-alternative-name="food, burrito, wrap">burrito</span>:</div></li>
     </ul>
     <h2>Places</h2>
     <ul class="places emojis" id="emoji-places">
