some more keywords :shaved_ice:

--- a/public/index.html
+++ b/public/index.html
@@ -529,10 +529,10 @@
       <li><div><img src="graphics/emojis/package.png">:<span class="name" data-alternative-name="box, mail, gift, cardboard, moving">package</span>:</div></li>
       <li><div><img src="graphics/emojis/door.png">:<span class="name" data-alternative-name="house, entry, exit">door</span>:</div></li>
       <li><div><img src="graphics/emojis/smoking.png">:<span class="name" data-alternative-name="smoke, kills, tobacco, cigarette, joint">smoking</span>:</div></li>
-      <li><div><img src="graphics/emojis/bomb.png">:<span class="name" data-alternative-name="boom, explode, explosion, terrorism">bomb</span>:</div></li>
-      <li><div><img src="graphics/emojis/gun.png">:<span class="name" data-alternative-name="violence, weapon, pistol, revolver">gun</span>:</div></li>
-      <li><div><img src="graphics/emojis/hocho.png">:<span class="name" data-alternative-name="knife, blade, cutlery, kitchen, weapon">hocho</span>:</div></li>
-      <li><div><img src="graphics/emojis/pill.png">:<span class="name" data-alternative-name="health, medicine, doctor, pharmacy, drug">pill</span>:</div></li>
+      <li><div><img src="graphics/emojis/bomb.png">:<span class="name" data-alternative-name="boom, explode, explosion, terrorism, ceramic, cartoon">bomb</span>:</div></li>
+      <li><div><img src="graphics/emojis/gun.png">:<span class="name" data-alternative-name="violence, weapon, pistol, revolver, handgun">gun</span>:</div></li>
+      <li><div><img src="graphics/emojis/hocho.png">:<span class="name" data-alternative-name="knife, blade, cutlery, kitchen, weapon, stab">hocho</span>:</div></li>
+      <li><div><img src="graphics/emojis/pill.png">:<span class="name" data-alternative-name="health, medicine, doctor, pharmacy, drug, meds">pill</span>:</div></li>
       <li><div><img src="graphics/emojis/syringe.png">:<span class="name" data-alternative-name="health, hospital, drugs, blood, medicine, needle, doctor, nurse">syringe</span>:</div></li>
       <li><div><img src="graphics/emojis/page_facing_up.png">:<span class="name" data-alternative-name="documents, office, paper, information">page_facing_up</span>:</div></li>
       <li><div><img src="graphics/emojis/page_with_curl.png">:<span class="name" data-alternative-name="documents, office, paper">page_with_curl</span>:</div></li>
@@ -542,8 +542,8 @@
       <li><div><img src="graphics/emojis/chart_with_downwards_trend.png">:<span class="name" data-alternative-name="graph, presentation, stats, recession, business, economics, money, sales, bad, failure">chart_with_downwards_trend</span>:</div></li>
       <li><div><img src="graphics/emojis/scroll.png">:<span class="name" data-alternative-name="documents, ancient, history, paper">scroll</span>:</div></li>
       <li><div><img src="graphics/emojis/clipboard.png">:<span class="name" data-alternative-name="stationery, documents">clipboard</span>:</div></li>
-      <li><div><img src="graphics/emojis/calendar.png">:<span class="name" data-alternative-name="schedule, date, planning">calendar</span>:</div></li>
-      <li><div><img src="graphics/emojis/date.png">:<span class="name" data-alternative-name="calendar, schedule">date</span>:</div></li>
+      <li><div><img src="graphics/emojis/calendar.png">:<span class="name" data-alternative-name="calendar, schedule, week, day, year, month, planning">calendar</span>:</div></li>
+      <li><div><img src="graphics/emojis/date.png">:<span class="name" data-alternative-name="calendar, schedule, week, day, year, month, planning">date</span>:</div></li>
       <li><div><img src="graphics/emojis/card_index.png">:<span class="name" data-alternative-name="business, stationery">card_index</span>:</div></li>
       <li><div><img src="graphics/emojis/file_folder.png">:<span class="name" data-alternative-name="documents, business, office">file_folder</span>:</div></li>
       <li><div><img src="graphics/emojis/open_file_folder.png">:<span class="name" data-alternative-name="documents, load">open_file_folder</span>:</div></li>
@@ -561,7 +561,7 @@
       <li><div><img src="graphics/emojis/notebook.png">:<span class="name" data-alternative-name="stationery, record, notes, paper, study">notebook</span>:</div></li>
       <li><div><img src="graphics/emojis/notebook_with_decorative_cover.png">:<span class="name" data-alternative-name="classroom, notes, record, paper, study">notebook_with_decorative_cover</span>:</div></li>
       <li><div><img src="graphics/emojis/ledger.png">:<span class="name" data-alternative-name="notes, paper">ledger</span>:</div></li>
-      <li><div><img src="graphics/emojis/books.png">:<span class="name" data-alternative-name="literature, library, study">books</span>:</div></li>
+      <li><div><img src="graphics/emojis/books.png">:<span class="name" data-alternative-name="literature, library, study, read">books</span>:</div></li>
       <li><div><img src="graphics/emojis/bookmark.png">:<span class="name" data-alternative-name="favorite, label, save">bookmark</span>:</div></li>
       <li><div><img src="graphics/emojis/name_badge.png">:<span class="name" data-alternative-name="fire, forbid">name_badge</span>:</div></li>
       <li><div><img src="graphics/emojis/microscope.png">:<span class="name" data-alternative-name="laboratory, experiment, zoomin, science, study">microscope</span>:</div></li>
@@ -670,7 +670,7 @@
       <li><div><img src="graphics/emojis/custard.png">:<span class="name" data-alternative-name="food, dessert, frozen">custard</span>:</div></li>
       <li><div><img src="graphics/emojis/icecream.png">:<span class="name" data-alternative-name="food, dessert, hot, summer">icecream</span>:</div></li>
       <li><div><img src="graphics/emojis/ice_cream.png">:<span class="name" data-alternative-name="food, dessert, hot">ice_cream</span>:</div></li>
-      <li><div><img src="graphics/emojis/shaved_ice.png">:<span class="name" data-alternative-name="food, dessert, hot, summer">shaved_ice</span>:</div></li>
+      <li><div><img src="graphics/emojis/shaved_ice.png">:<span class="name" data-alternative-name="food, dessert, hot, summer, snow cone">shaved_ice</span>:</div></li>
       <li><div><img src="graphics/emojis/birthday.png">:<span class="name" data-alternative-name="party, cake, celebration">birthday</span>:</div></li>
       <li><div><img src="graphics/emojis/cake.png">:<span class="name" data-alternative-name="food, dessert">cake</span>:</div></li>
       <li><div><img src="graphics/emojis/cookie.png">:<span class="name" data-alternative-name="food, dessert, snack, oreo, chocolate, sweet">cookie</span>:</div></li>
